fixed mobile menu view on mobile, added auto hide mobile menu on scroll 300 or resize window, replaced button-go-top border by shadow

--- a/assets/css/addons.css
+++ b/assets/css/addons.css
@@ -158,14 +158,14 @@ h6 {
     height: 77px;
     width: 77px;
     background: black;
-    border: solid 1px white;
+    box-shadow: 0 0 3px 0 rgba(255, 255, 255, 0.9);
     fill: #b3b3b3;
     stroke: #d6d6d6;
     z-index: 101;
 }
 .button-go-top:hover {
     background: #1a1a1a;
-    border: solid 1px white;
+    box-shadow: 0 0 4px 1px rgba(255, 255, 255);
     fill: #fff;
     stroke: #fff;
 }
@@ -335,7 +335,7 @@ h6 {
         opacity: 1;
         transform: translateY(0);
     }
-    .menu-open:checked ~ .mobile-menu .menu-close__label {
+    .mobile-menu .menu-close__label {
         display: block;
         margin: 35px 0;
         padding: 0 50px;
@@ -344,36 +344,30 @@ h6 {
         transform: scale(1.15) rotate(180deg);
         transition: all 0.35s ease-in-out;
     }
-    .menu-open:checked ~ .mobile-menu .mobile-menu__footer {
+    .mobile-menu .mobile-menu__footer {
+        display: flex;
         border-top: 1px solid #fff;
         padding: 30px 10px 20px;
-        display: flex;
         flex-wrap: wrap;
         justify-content: center;
         text-transform: none;
     }
-    .menu-open:checked ~ .mobile-menu .mobile-menu__footer .site-nav-logo {
+    .mobile-menu .mobile-menu__footer .site-nav-logo {
         display: block;
         padding: 20px 50px !important;
         margin-left: 0 !important;
     }
-    .menu-open:checked ~ .mobile-menu .mobile-menu__footer .outer {
+    .mobile-menu .mobile-menu__footer .outer {
         padding: 0 10px;
     }
-    .menu-open:checked ~ .mobile-menu .mobile-menu__footer .site-footer {
+    .mobile-menu .mobile-menu__footer .site-footer {
         margin-top: 80px;
     }
-    .menu-open:checked ~ .mobile-menu .mobile-menu__footer .site-footer,
-    .menu-open:checked
-        ~ .mobile-menu
-        .mobile-menu__footer
-        .site-footer-content {
+    .mobile-menu .mobile-menu__footer .site-footer,
+    .mobile-menu .mobile-menu__footer .site-footer-content {
         max-width: 100%;
     }
-    .menu-open:checked
-        ~ .mobile-menu
-        .mobile-menu__footer
-        .site-footer-content {
+    .mobile-menu .mobile-menu__footer .site-footer-content {
         display: flex;
         flex-wrap: nowrap;
         font-size: 1.2rem;
@@ -399,19 +393,17 @@ h6 {
     .site-archive-header .site-nav-left-wrapper,
     .site-home-header .site-nav,
     .site-home-header .site-nav-left-wrapper {
-        position: unset !important;
+        position: initial !important;
     }
-    .site-header .mobile-menu,
-    .fixed-nav-active .mobile-menu,
-    .site-archive-header .mobile-menu,
-    .site-home-header .mobile-menu {
-        display: none;
-        position: absolute;
+    .mobile-menu {
+        display: block !important;
+        position: absolute !important;
         width: 375px;
         top: 0;
-        left: 0;
+        left: -375px;
         background: #000;
         z-index: 200;
+        transition: all 0.25s ease-in-out;
     }
     .site-header .mobile-menu li,
     .fixed-nav-active .mobile-menu li,
@@ -420,13 +412,13 @@ h6 {
         margin-right: auto;
     }
     .menu-open:checked ~ .mobile-menu {
-        display: block;
+        transform: translateX(375px);
     }
     .site-header .mobile-menu .nav,
     .fixed-nav-active .mobile-menu .nav,
     .site-archive-header .mobile-menu .nav,
     .site-home-header .mobile-menu .nav {
-        position: unset;
+        position: initial;
         flex-direction: column;
         width: 100%;
         padding: 20px 50px;
@@ -442,11 +434,11 @@ h6 {
         max-width: 100%;
     }
     .single-post .post-full {
-        width: unset;
-        min-width: unset;
+        width: initial;
+        min-width: initial;
         max-width: 100%;
-        margin-right: unset;
-        margin-left: unset;
+        margin-right: initial;
+        margin-left: initial;
     }
     .single-post .post-full-byline {
         max-width: 100%;
@@ -524,16 +516,10 @@ h6 {
         margin-top: -35px;
         z-index: 1100;
     }
-    .hashtag-toggle:checked
-        ~ .nav
-        .hashtag-toggle__label
-        .hashtag-toggle__show-all {
+    .hashtag-toggle:checked ~ .nav .hashtag-toggle__label .hashtag-toggle__show-all {
         display: inline-block;
     }
-    .hashtag-toggle:checked
-        ~ .nav
-        .hashtag-toggle__label
-        .hashtag-toggle__hide {
+    .hashtag-toggle:checked ~ .nav .hashtag-toggle__label .hashtag-toggle__hide {
         display: none;
     }
     .hashtag-toggle:checked ~ .nav {
@@ -559,60 +545,39 @@ h6 {
         min-height: 280px;
         border-top: 0;
     }
-    .tag-template
-        .post-card:not(.post-card-large):nth-child(6n + 1)
-        .post-card-image-link {
+    .tag-template .post-card:not(.post-card-large):nth-child(6n + 1) .post-card-image-link {
         position: relative;
         flex: 1 1 auto;
         margin-bottom: 0;
         min-height: 380px;
     }
-    .tag-template
-        .post-card:not(.post-card-large):nth-child(6n + 1)
-        .post-card-image {
+    .tag-template .post-card:not(.post-card-large):nth-child(6n + 1) .post-card-image {
         position: absolute;
         width: 100%;
         height: 100%;
     }
-    .tag-template
-        .post-card:not(.post-card-large):nth-child(6n + 1)
-        .post-card-content {
+    .tag-template .post-card:not(.post-card-large):nth-child(6n + 1) .post-card-content {
         flex: 0 1 361px;
         justify-content: center;
     }
-    .tag-template
-        .post-card:not(.post-card-large):nth-child(6n + 1)
-        .post-card-content-link,
-    .tag-template
-        .post-card:not(.post-card-large):nth-child(6n + 1)
-        .post-card-meta {
+    .tag-template .post-card:not(.post-card-large):nth-child(6n + 1) .post-card-content-link,
+    .tag-template .post-card:not(.post-card-large):nth-child(6n + 1) .post-card-meta {
         padding: 0 0 0 40px;
     }
-    .tag-template
-        .post-card:not(.post-card-large):nth-child(6n + 1):not(.no-image)
-        .post-card-header {
+    .tag-template .post-card:not(.post-card-large):nth-child(6n + 1):not(.no-image) .post-card-header {
         margin-top: 0;
     }
-    .tag-template
-        .post-card:not(.post-card-large):nth-child(6n + 1)
-        .post-card-title {
+    .tag-template .post-card:not(.post-card-large):nth-child(6n + 1) .post-card-title {
         margin-top: 0;
         font-size: 3.2rem;
     }
-    .tag-template
-        .post-card:not(.post-card-large):nth-child(6n + 1)
-        .post-card-excerpt
-        p {
+    .tag-template .post-card:not(.post-card-large):nth-child(6n + 1) .post-card-excerpt p {
         margin-bottom: 1.5em;
         font-size: 1.8rem;
         line-height: 1.5em;
     }
-    .tag-template
-        .post-card:not(.post-card-large):nth-child(6n + 1)
-        .post-card-content-link,
-    .tag-template
-        .post-card:not(.post-card-large):nth-child(6n + 1)
-        .post-card-meta {
+    .tag-template .post-card:not(.post-card-large):nth-child(6n + 1) .post-card-content-link,
+    .tag-template .post-card:not(.post-card-large):nth-child(6n + 1) .post-card-meta {
         padding: 0 0 0 40px;
     }
 }
